# silicon-alloy

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
core/: Cargo.toml  README.md
core/alloy-cli/: Cargo.toml
core/alloy-cli/src/: main.rs
core/alloy-core/: Cargo.toml
core/alloy-core/src/: bottle.rs  lib.rs  recipes.rs  rpc.rs  runtime.rs
core/alloy-daemon/: Cargo.toml
core/alloy-daemon/src/: main.rs
core/cli/: Cargo.toml
core/cli/src/: main.rs  rpc_client.rs
core/daemon/: Cargo.toml
core/daemon/src/: main.rs  rpc.rs  service.rs
core/shared/: Cargo.toml
core/shared/src/: lib.rs  recipes.rs
docs/: arm64.md  core.md  getting_started.md  gui.md  runtime.md
gui/: Package.swift  README.md
gui/SiliconAlloyApp/: Package.swift
gui/SiliconAlloyApp/Sources/App/: App.swift
gui/SiliconAlloyApp/Sources/App/Models/: Bottle.swift
gui/SiliconAlloyApp/Sources/App/Services/: BottleStore.swift  DaemonClient.swift
gui/SiliconAlloyApp/Sources/App/Views/: ContentView.swift
gui/SiliconAlloyApp/Sources/Assets/AccentColor.colorset/: Contents.json
gui/SiliconAlloyApp/Sources/Assets/AppIcon.appiconset/: Contents.json
gui/Sources/SiliconAlloyApp/: AppState.swift  BottleViews.swift  ContentView.swift  CreateBottleSheet.swift  CreateShortcutSheet.swift  DaemonBridge.swift  Models.swift  RecipeBrowserView.swift  UnixDomainSocket.swift  main.swift
recipes/: README.md  schema.yaml  steam.yml
recipes/notepad-plus-plus/: recipe.yaml
recipes/notepad-plus-plus/resources/: README.txt
runtime/: Brewfile  README.md  build_wine.sh  fetch_components.sh
runtime/experiments/: Brewfile  build_wine_arm64.sh
runtime/scripts/: build_wine.sh  fetch_components.sh
scripts/: bootstrap.sh  run-exe.sh
