[workspace]
members = [
  "daemon",
  "cli",
  "shared",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "LGPL-2.1-or-later"
authors = ["Silicon Alloy Contributors"]
homepage = "https://github.com/your-org/silicon-alloy"
repository = "https://github.com/your-org/silicon-alloy"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
directories = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "signal", "fs"] }
thiserror = "1.0"
uuid = { version = "1.11", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
[workspace]
members = [
    "alloy-core",
    "alloy-daemon",
    "alloy-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = ["Silicon Alloy Contributors"]

[workspace.dependencies]
anyhow = "1.0"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "sync", "time", "fs", "process", "io-util"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
thiserror = "1.0"
futures = "0.3"
time = { version = "0.3", features = ["macros", "formatting"] }
clap = { version = "4.5", features = ["derive"] }
serde_yaml = "0.9"

