[package]
name = "alloy-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
alloy-core = { path = "../alloy-core" }
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["net"] }
uuid.workspace = true

